--- a/scene/one/book-of-ella-2/index.html
+++ b/scene/one/book-of-ella-2/index.html
@@ -171,7 +171,7 @@
 
         <div class="quote" id="footnotes">
 
-          <p class="small"><sup>1</sup> The snowmen and other snow art is from the last great newspaper comic: <em>Calvin and Hobbes</em>, created by Bill Watterson. The daily comic strip was syndicated from November 1985 to December 1995, and is commonly cited as &ldquo;the last great newspaper comic&rdquo;. <a href="../../../url/www/calvinandhobbes/" rel="noopener" target="_blank" title="Bill Watterson / Calvin and Hobbes">Website Link</a></p>
+          <p class="small"><sup>1</sup> The snowmen and other snow art is from the last great newspaper comic: <em>Calvin and Hobbes</em>, created by Bill Watterson. The daily comic strip was syndicated from November 1985 to December 1995, and is commonly cited as &ldquo;the last great newspaper comic&rdquo;. <a href="../../../url/www/calvinandhobbes/" rel="noopener" target="_blank" title="Bill Watterson / Calvin and Hobbes">Website&nbsp;Link</a></p>
 
         </div>
 
