--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -123,11 +123,11 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Mark Deeble, wildlife filmmaker. <a title="Mark Deeble" href="../../../url/wp/markdeeble/" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>2</sup> African Impact. <a title="African Impact" href="../../../url/-com/africanimpact/" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>3</sup> David Shepherd Wildlife Foundation. Fighting wildlife crime. <a title="David Shepherd / Fighting Wildlife Crime" href="../../../url/-org/davidshepherd-fighting-wildlife-crime/" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>4</sup> International Elephant Foundation. <a title="International Elephant Foundation" href="../../../url/-org/elephantconservation/" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>5</sup> Elephant-Human Relations Aid. <a title="Elephant-Human Relations Aid" href="../../../url/-org/ehranamibia/" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>1</sup> Mark Deeble, wildlife filmmaker. <a title="Mark Deeble" href="../../../url/wp/markdeeble/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> African Impact. <a title="African Impact" href="../../../url/-com/africanimpact/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> David Shepherd Wildlife Foundation. Fighting wildlife crime. <a title="David Shepherd / Fighting Wildlife Crime" href="../../../url/-org/davidshepherd-fighting-wildlife-crime/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> International Elephant Foundation. <a title="International Elephant Foundation" href="../../../url/-org/elephantconservation/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>5</sup> Elephant-Human Relations Aid. <a title="Elephant-Human Relations Aid" href="../../../url/-org/ehranamibia/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
