--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -249,8 +249,8 @@
       </div>
 
       <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> Wild Bird Trust &ndash; Okavango Wilderness Project <a href="../../../url/-com/wildbirdtrust-okavango-wilderness-project/" rel="noopener" target="_blank" title="Wild Bird Trust / Okavango Wilderness Project">Website Link</a></p>
-        <p class="small"><sup>2</sup> The HALO Trust, Landmine clearance in Angola. <a href="../../../url/-org/halotrust-okavango/" rel="noopener" target="_blank" title="The HALO Trust / Landmine clearance in Angola.">Website Link</a></p>
+        <p class="small"><sup>1</sup> Wild Bird Trust &ndash; Okavango Wilderness Project <a href="../../../url/-com/wildbirdtrust-okavango-wilderness-project/" rel="noopener" target="_blank" title="Wild Bird Trust / Okavango Wilderness Project">Website&nbsp;Link</a></p>
+        <p class="small"><sup>2</sup> The HALO Trust, Landmine clearance in Angola. <a href="../../../url/-org/halotrust-okavango/" rel="noopener" target="_blank" title="The HALO Trust / Landmine clearance in Angola.">Website&nbsp;Link</a></p>
 
       </div>
 
