--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -99,7 +99,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen. (2019) <em>The Last Elephants</em>, &lsquo;Botswana's sanctuary&rsquo; p. 225. Smithsonian Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, <em>The Last Elephants</em>, &lsquo;Botswana's sanctuary&rsquo; p. 225. (2019) Smithsonian Books</font></h4>
       </div>
 
       <div>
@@ -205,7 +205,7 @@
 
         <div class="quote" id="footnotes">
           <p class="small"><sup>1</sup> Adams, T.A., Chase, M.J., Attard, A., Leggett, K. &lsquo;A preliminary study of stakeholders' opinions and perceptions of elephants and elephant management in Botswana.&rsquo; Pachyderm, No.58 2017. <a href="../../../url/-org/pachydermjournal-419/" title="A preliminary study of stakeholders’ opinions and perceptions of elephants and elephant management in Botswana." target="_blank" rel="noopener">Download PDF</a></p>
-          <p class="small"><sup>2</sup> Bell, C., Pinnock, D. <em>The Last Elephants</em> (2019) &lsquo;Making a safe haven&rsquo;, p. 211-221. Smithsonian Books.</p>
+          <p class="small"><sup>2</sup> Bell, C., Pinnock, D. <em>The Last Elephants</em>, &lsquo;Making a safe haven&rsquo;, p. 211-221. (2019) Smithsonian Books.</p>
           <p class="small"><sup>3</sup> Cushman, S.A., Chase, M.J., and Griffin, C. &lsquo;Elephants in space and time.&rsquo; Oikos, 109:331-341. 2005. <a href="../../../url/-org/elephantswithoutborders-elephants-in-space-and-time-pdf" title="Elephants in space and time." target="_blank" rel="noopener">Download PDF</a></p>
           <!-- <p class="small"><sup>6</sup> Sitati and Walpole 2006; Hoare 2012; Songhurst and Coulson 2014</p> -->
 
