--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -46,31 +46,31 @@
       </div>
 
       <div>
-        <h3>2016 Ivory Burn, Kenya</h3>
-        <p>Nairobi&mdash;In April, the President of Gabon, together with the President of Kenya, set fire to 105 tons of elephant ivory and more than 1 ton of rhino horn in a dramatic statement against the trade in ivory and products from endangered species. This is believed to be the largest stockpile ever destroyed. The conservationists who gathered from across the world to bear witness to the event describe pyres that billowed thick plumes of white smoke over yellow flames that consumed the ivory. This was ignited by about twenty thousand litres of jet fuel and oxygen. It was not known how long the burn would last because the burning of such a quantity was unprecedented. The stacks of tusks represented more than six-thousand seven-hundred (6,700) elephants killed for their ivory and three-hundred and forty (340) rhinos killed for their horns, plus endangered animal hides and skins and so on, sandalwood seizures and sacks full of Prunus Africana bark.<sup>&nbsp;[<a class="button" onclick="fn();" title="Zane, 2016">1</a>]</sup></p>
+        <h3>2016 Ivory Burn, Nairobi</h3>
+        <p>In April, the President of Gabon, together with the President of Kenya, set fire to 105 tons of elephant ivory and more than 1 ton of rhino horn in a dramatic statement against the trade in ivory and products from endangered species. This is believed to be the largest stockpile ever destroyed. Conservationists and journalists who gathered from across the world to witness the event describe pyres that billowed thick plumes of white smoke over yellow flames that consumed the ivory. This was ignited by about twenty thousand litres of jet fuel and oxygen. It was not known how long the burn would last because the burning of such a quantity was unprecedented. The stacks of tusks represented more than six-thousand seven-hundred (6,700) elephants killed for their ivory and three-hundred and forty (340) rhinos killed for their horns, plus endangered animal hides and skins and so on, sandalwood seizures and sacks full of Prunus Africana bark.<sup>&nbsp;[<a class="button" onclick="fn();" title="Zane, 2016">1</a>]</sup></p>
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>A time has come when we must take a stand and the stand is clear. [&hellip;] Kenya is making a statement that for us ivory is worthless unless it is on our elephants. This will send an absolutely clear message that the trade in ivory must come to an end and our elephants must be protected. I trust that the world will join us to end the horrible suffering of our herds and save our elephants for future generations.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Uhuru Kenyatta. (2016) Presidential address. Nairobi, Kenya</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>A time has come when we must take a stand and the stand is clear. [&hellip;] Kenya is making a statement that for us ivory is worthless unless it is on our elephants. This will send an absolutely clear message that the trade in ivory must come to an end and our elephants must be protected. I trust that the world will join us to end the horrible suffering of our herds and save our elephants for future generations.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;President Uhuru Kenyatta (2016) Presidential address, Nairobi, Kenya</font></h4>
 
       </div>
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~01/photo/2016.kenya.ivory-pile.jpg" />
-        <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016</p>
+        <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       </div>
 
       <div>
-        <p>With this act, Kenya has demonstrated to the world at large that the cache was destroyed and not pilfered back into the black market. This decision has reaffirmed a commitment to protect the irreplaceable wildlife in Kenya. President Uhuru Kenyatta, who was joined by other African leaders and foreign officials, has demanded a total ban on the ivory trade to protect the future of wild elephants on the continent.</p>
+        <p>With this act, Kenya has demonstrated to the world at large that the cache was destroyed and not pilfered back into the black market. This decision has reaffirmed a commitment to protect the irreplaceable wildlife in Kenya. Kenyan President Uhuru Kenyatta, who was joined by other African leaders and foreign officials, has demanded a total ban on the ivory trade to protect the future of wild elephants on the continent.</p>
 
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/photo/2016.kenya.ivory-burn.jpg" />
-      <p class="text-right gutter-side">&lsquo;Ivory Burn&rsquo;, Kenya, 2016</p>
+      <p class="text-right gutter-side">&lsquo;Ivory set on fire in Nairobi National Park&rsquo;, Kenya, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       <div>
-        <p>Kenya Wildlife Service (KWS) director general Kitili Mbathi said, &ldquo;We do not believe there is any intrinsic value in ivory, and therefore we are going to burn all our stockpiles and demonstrate to the world that ivory is only valuable on elephants&rdquo;. KWS chairman and renowned paleoanthropologist and conservationist, Richard Leakey, said the burning of the ivory should encourage African countries to support a ban on ivory trade: &ldquo;We will burn ivory and we hope every country in the globe will support Kenya and say never again should we trade ivory&rdquo;. Kenyatta said that Kenya will push for the total ban on trade in ivory at the 17th meeting of CITES, to be held in South Africa later this year.</p>
+        <p>Kenya Wildlife Service (KWS) director general Kitili Mbathi said, &ldquo;We do not believe there is any intrinsic value in ivory, and therefore we are going to burn all our stockpiles and demonstrate to the world that ivory is only valuable on elephants&rdquo;. KWS chairman Richard Leakey hoped the burning of the ivory would encourage African countries to support a ban on ivory trade: &ldquo;We will burn ivory and we hope every country in the globe will support Kenya and say never again should we trade ivory&rdquo;. Kenyatta proclaimed that Kenya will push for the total ban on trade in ivory at the 17th meeting of CITES, to be held in South Africa later this year.</p>
       </div>
 
       <div class="color quote">
@@ -78,9 +78,9 @@
       </div>
 
       <div>
-        <p>Kenya decided to destroy the ivory instead of selling it for an estimated one-hundred and fifty (150) million U.S. dollars. The Kenyan ivory pyres represented about five per cent of global ivory stores. Some critics suggested that the money raised from the ivory sales could be used to develop Kenya and protect wildlife. Some said destroying so much of a rare commodity could increase its value and encourage more poaching rather than less. Others said that the burning would not end the killing of elephants because international gangs take advantage of Kenya's porous borders and corruption to continue the illegal trade, with the main trafficking route to Asia being through the Kenyan port of Mombasa.</p>
+        <p>The Republic of Kenya decided to destroy the ivory instead of selling it for an estimated one-hundred and fifty (150) million US dollars. That ivory represented about five per cent of global ivory stores. Some critics suggested that the money raised from the ivory sales could be used to develop Kenya and protect wildlife. Some said destroying so much of a rare commodity could increase its value and encourage more poaching rather than less. Others said that the burning would not end the killing of elephants because international gangs take advantage of Kenya's porous borders and corrupt officials to continue the illegal trade, with the main trafficking route to Asia being through the Kenyan port of Mombasa.</p>
 
-        <p class="linebreak">Kenyatta wants to make the point very clear that ivory should not have any commercial value. Before igniting the first pyre, Kenyatta made the statement:</p>
+        <p class="linebreak">Kenyan President Kenyatta wants to make the point very clear that ivory should not have any commercial value. Before igniting the first pyre, Kenyatta made the statement:</p>
 
         <div>
           <p><b class="color">&ldquo;</b>The height of the pile of ivory before us marks the strength of our resolve.<b class="color">&rdquo;</b></p>
@@ -89,12 +89,52 @@
 
         </div>
 
+        <p>That point is worth repeating. Kenya set fire to fifteen tons of ivory in 2015, as the President of Kenya, Kenyatta, pledged to place the rest of the national ivory stockpile &lsquo;beyond economic use&rsquo;. And so 105 tons of ivory was burned in 2016. Yet, sadly, this was not a first presidential message of its kind, delivered alongside an pyre of ivory in Nairobi National Park.<sup>&nbsp;[<a class="button" onclick="fn();" title="BBC News, 2015">2</a>]</sup></p>
+
+        <p class="linebreak lineend" id="nairobi-1989-toggle">History: <a class="color overscore" onclick="toggle_nairobi_1989();">1989 Ivory Burn, Nairobi</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Footnotes">3,4</a>]</sup></p>
+
+        <div class="clear indent-left-line" id="nairobi-1989">
+          <p class="linebreak"><font class="color"><em>Poaching elephants for their ivory tusks turned rampant across Africa in the 1970s, and only abated as African elephants were uplisted to Appendix I of the Convention on International Trade in Endangered Species (CITES) following the headlines of an ivory burn in Nairobi National Park in 1989.</em></font> <em>At that ivory burn, then President of Kenya&mdash;Daniel arap Moi was ahead of his time when he delivered this message to a global audience: &ldquo;To stop the poacher, the trader must also be stopped. And to stop the trader, the final buyer must be convinced not to buy ivory. I appeal to people all over the world to stop buying ivory.&rdquo;</em></p>
+
+          <div>
+            <p>The elephant population in Kenya was estimated at nearly three-hundred thousand at the beginning of the 1970s. Then came the crisis. Herds across Africa were systematically slaughtered to supply international ivory markets. By the end of the 1980s, there were less than twenty thousand elephants in Kenya.</p>
+
+            <p class="linebreak">In April 1989, the President of Kenya, Daniel arap Moi, appointed Kenyan conservationist and world-renowned paleoanthropologist Richard Leakey as head of the Wildlife Conservation and Management Department&mdash;the department that was later replaced by <u>Kenya Wildlife Service</u>. Leakey became its first chairman. Within months of his appointment, backed by political support, Leakey effectively quelled corruption at the department and established well-equipped anti-poaching units in the parks.</p>
+
+            <p class="linebreak">Then, in July of that year, Leakey and then President Moi set fire to twelve tons of tusks&mdash;a stockpile of ivory valued at millions of US dollars. This was a message to the world to end the slaughter. CITES resolved to ban trade in ivory. Ivory industries withered, or went underground. Then the poaching crisis was under control, and elephant populations in Kenya began to rebound.</p>
+
+            <p class="linebreak">Until 2008&hellip; CITES authorized a one-off sale of ivory stockpiles from four Southern African countries to China and Japan. Ivory markets, all of a sudden legal, resurfaced in those Asian countries and a demand for ivory was renewed. Poaching for ivory once again ramped up across Africa, with elephants in Kenya swept up in the slaughter.</p>
+
+            <p class="linebreak">Despite the devastation, Kenyan conservationist Dr Paula Kahumbu, who was first mentored by Richard Leakey, held faith in Kenya&mdash;in its civil society and freedom of the press, in its political support for conservation from incoming President Uhuru Kenyatta, and in its recent history of elephant conservation success in the 1990s. And according to the IUCN African elephant database, the elephant population in Kenya is now near thirty-thousand and relatively stable, especially relative to other African countries.</p>
+
+            <div class="clear-bottom">
+              <p><b class="color">&ldquo;</b>Earlier, a hundred thousand elephants lived in Kenya and we didn’t have a noteworthy problem with it. The problem that we have today is not that there are more elephants.<b class="color">&rdquo;</b><font class="color">&nbsp;&mdash; Dr Richard Leakey</font></p>
+
+            </div>
+
+            <p class="linebreak">Close history: <a class="color overscore" onclick="toggle_nairobi_1989();">1989 Ivory Burn, Nairobi</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Footnotes">3,4</a>]</sup></p>
+
+          </div>
+
+        </div>
+
+        <p>Today elephants have even less space to make a home, and we have ever less time to make a change.</p>
+
+        <p class="linebreak">Kenya &ndash; in particular the port of Mombasa &ndash; is infamously positioned as a primary point of transit for ivory smuggled out of Africa on trade routes to Asia. The history of this port city gives Kenya a particular responsibility in the international effort to enforce a ban on ivory. While this responsibility is shared by a number of other countries with elephant populations to uphold, or with ivory markets to close down, Kenya will remain complicit, in part, in the endangerment of African elephants until the ivory trafficked through its porous borders and ports is stopped &ndash; and the ivory traffickers are prosecuted.</p>
+
+        <p class="linebreak">More about the history of the ivory trade: <a href="../elephant-conservation/" title="A History of Elephant Conservation">A History of Elephant Conservation</a>.</p>
+
       </div>
 
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Zane, D. &lsquo;Kenya's ivory inferno: Does burning elephant tusks destroy them?&rsquo; BBC News, 29 April 2016. <a href="../../../url/www/bbc-world-africa-kenyas-ivory-inferno/" title="BBC News / Kenya's ivory inferno" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>1</sup> Zane, D. <em>Africa</em>, &lsquo;Kenya's ivory inferno: Does burning elephant tusks destroy them?&rsquo;, 29 April 2016. BBC News. <a href="../../../url/www/bbc-world-africa-kenyas-ivory-inferno/" title="BBC News / Kenya's ivory inferno" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> <em>Africa</em>, &lsquo;Kenyan ivory burnt by President Uhuru Kenyatta&rsquo;, 3 March 2015. BBC News. <a href="../../../url/www/bbc-world-africa-kenyan-ivory-burnt/" title="BBC News / Kenyan ivory burnt by President Uhuru Kenyata" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> Perlez, J. &lsquo;Can he save the elephants?&rsquo;, 7 January 1990. New York Times. <a href="../../../url/www/nytimes-can-he-save-the-elephants/" title="New York Times / Magazine / Can he save the elephants?" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> Lander, J. <em>Paula Kahumbu: Out of Africa</em>, &lsquo;Saving Africa’s elephants from poachers is the driving passion for a daughter of Kenya.&rsquo;, 12 November 2014. Princeton Alumni Weekly. <a href="../../../url/-edu/princeton-paw-paula-kahumbu-out-of-africa/" title="Princeton Alumni Weekly / Paula Kahumbu: Out of Africa" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+
+          <!-- https://apnews.com/article/50525519e0654e7e859d3cace7a5c829 -->
 
         </div>
       </div>
@@ -117,8 +157,10 @@
 
       <div class="clear-top">
         <h3 class="linebreak">A Direct Response</h3>
+        <p>The campaign <em>Hands Off Our Elephants</em> was launched in July 2013 by Paula Kahumbu with her wildlife conservation organization <a href="../../../url/-org/wildlifedirect/" rel="noopener" target="_blank" title="Wildlife Direct">Wildlife Direct</a>. The campaign partnered with civil society, corporations, government agencies and other conservation organizations to unify a nation against its poaching crisis. Margaret Kenyatta, the First Lady of the Republic of Kenya, had become a public patron of the campaign. Dr Paula Kahumbu and <em>Hands Off Our Elephants</em> had generated unprecedented awareness and support for wildlife conservation in Kenya. This ivory burn was a political response to that popular support.</p>
+
         <!-- Credit where credit is due. -->
-        <p>The campaign <em>Hands Off Our Elephants</em> was launched in July 2013 by Paula Kahumbu with her wildlife conservation organization <u>Wildlife Direct</u>. The campaign partnered with civil society, corporations, government agencies and other conservation organizations to unify a nation against its poaching crisis. Margaret Kenyatta, the First Lady of the Republic of Kenya, had become a public patron of the campaign. Dr Paula Kahumbu and <em>Hands Off Our Elephants</em> had generated unprecedented awareness and support for wildlife conservation in Kenya. This ivory burn was a political response to that popular support.</p>
+        <!-- Eyes in the Courtroom -->
 
       </div>
 
@@ -181,13 +223,29 @@
 
   var register_form = document.getElementById( "register" ),
       register_toggle = document.getElementById( "register-toggle" ),
+      nairobi_1989_toggle = document.getElementById( "nairobi-1989" ),
+      nairobi_1989_toggle_link = document.getElementById( "nairobi-1989-toggle" ),
       video_toggle = document.getElementById( "video" ),
       video_toggle_link = document.getElementById( "video-toggle" );
 
   video_toggle.style.display = "none";
   video_toggle_link.style.display = "block";
 
+  nairobi_1989_toggle.style.display = "none";
+  nairobi_1989_toggle_link.style.display = "block";
+
   register_form.style.display = "none";
+
+  function toggle_nairobi_1989() {
+    if ( nairobi_1989_toggle.style.display == "none" ) {
+      nairobi_1989_toggle.style.display = "block";
+      nairobi_1989_toggle_link.style.display = "none";
+    }
+    else {
+      nairobi_1989_toggle.style.display = "none";
+      nairobi_1989_toggle_link.style.display = "block";
+    }
+  };
 
   function toggle_video() {
     if ( video_toggle.style.display == "none" ) {
