--- a/scene/one/elephant-history/index.html
+++ b/scene/one/elephant-history/index.html
@@ -75,11 +75,11 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Shoshani, J. (2005) &ldquo;Order Proboscidea.&ldquo; In Wilson, D. E.; Reeder, D. M (eds.). <em>Mammal Species of the World: A Taxonomic and Geographic Reference</em>, Vol. 1 (3rd ed.). Johns Hopkins University Press. ISBN 9780801882210. <a href="../../../url/-org/worldcat-mammal-species-of-the-world/" title="Online Computer Library Center / 62265494" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>2</sup> Larramendi, A. (2016) &ldquo;Shoulder height, body mass and shape of proboscideans.&rdquo; <em>Acta Palaeontologica Polonica</em>. <a href="../../../url/-pl/pan-app-001362014/" title="Acta Palaeontologica Polonica / 00136.2014" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>3</sup> Campos-Arceiz, A.; Blake, S. (2011) &ldquo;Mega-gardeners of the forest &ndash; the role of elephants in seed dispersal.&rdquo; <em>Acta Oecologica</em>. Vol. 37, Issue 6. <a href="../../../url/www/sciencedirect-S1146609X11000154/" title="Acta Oecologica / 2011.01.014" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>4</sup> Sukumar, R. (2003). &ldquo;The Living Elephants: Evolutionary Ecology, Behaviour, and Conservation.&rdquo; <em>Oxford University Press</em>, USA. ISBN 9780195107784. <a href="../../../url/-org/worldcat-living-elephants/" title="Online Computer Library Center / 935260783" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>5</sup> Kingdon, J. et al. (2013) &ldquo;Mammals of Africa.&rdquo; <em>Bloomsbury</em>. ISBN 9781408189962. <a href="../../../url/re/mammals-of-africa-vol-i-vi/" title="Research Gate / Mammals of Africa, Volumes I-VI" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>1</sup> Shoshani, J. (2005) &ldquo;Order Proboscidea.&ldquo; In Wilson, D. E.; Reeder, D. M (eds.). <em>Mammal Species of the World: A Taxonomic and Geographic Reference</em>, Vol. 1 (3rd ed.). Johns Hopkins University Press. ISBN 9780801882210. <a href="../../../url/-org/worldcat-mammal-species-of-the-world/" title="Online Computer Library Center / 62265494" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> Larramendi, A. (2016) &ldquo;Shoulder height, body mass and shape of proboscideans.&rdquo; <em>Acta Palaeontologica Polonica</em>. <a href="../../../url/-pl/pan-app-001362014/" title="Acta Palaeontologica Polonica / 00136.2014" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> Campos-Arceiz, A.; Blake, S. (2011) &ldquo;Mega-gardeners of the forest &ndash; the role of elephants in seed dispersal.&rdquo; <em>Acta Oecologica</em>. Vol. 37, Issue 6. <a href="../../../url/www/sciencedirect-S1146609X11000154/" title="Acta Oecologica / 2011.01.014" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> Sukumar, R. (2003). &ldquo;The Living Elephants: Evolutionary Ecology, Behaviour, and Conservation.&rdquo; <em>Oxford University Press</em>, USA. ISBN 9780195107784. <a href="../../../url/-org/worldcat-living-elephants/" title="Online Computer Library Center / 935260783" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>5</sup> Kingdon, J. et al. (2013) &ldquo;Mammals of Africa.&rdquo; <em>Bloomsbury</em>. ISBN 9781408189962. <a href="../../../url/re/mammals-of-africa-vol-i-vi/" title="Research Gate / Mammals of Africa, Volumes I-VI" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -102,8 +102,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>6</sup> Kellogg, M., Burkett, S., Dennis, T. R., Stone, G., Gray, B. A., McGuire, P. M., Zori, R. T., Stanyon, R. (2007) &ldquo;Chromosome painting in the manatee supports Afrotheria and Paenungulata.&rdquo; <em>Evolutionary Biology</em>. Vol. 7. PMC 1784077. PMID 17244368. <a href="../../../url/re/chromosome-painting-in-the-manatee-supports-afrotheria-and-paenungulata/" title="Research Gate / BMC Evolutionary Biology / 1471-2148-7-6" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>7</sup> Vazquez, J. M., Sulak, M., Chigurupati, S., Lynch, V. J. (2018) &ldquo;A Zombie LIF Gene in Elephants Is Upregulated by TP53 to Induce Apoptosis in Response to DNA Damage.</a>&rdquo; <em>Cell Reports</em>. Vol. 24, Issue 7. <a href="../../../url/doi/10-1016-j-celrep-2018-07-042/" title="Cell Reports / 2018.07.042" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>6</sup> Kellogg, M., Burkett, S., Dennis, T. R., Stone, G., Gray, B. A., McGuire, P. M., Zori, R. T., Stanyon, R. (2007) &ldquo;Chromosome painting in the manatee supports Afrotheria and Paenungulata.&rdquo; <em>Evolutionary Biology</em>. Vol. 7. PMC 1784077. PMID 17244368. <a href="../../../url/re/chromosome-painting-in-the-manatee-supports-afrotheria-and-paenungulata/" title="Research Gate / BMC Evolutionary Biology / 1471-2148-7-6" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>7</sup> Vazquez, J. M., Sulak, M., Chigurupati, S., Lynch, V. J. (2018) &ldquo;A Zombie LIF Gene in Elephants Is Upregulated by TP53 to Induce Apoptosis in Response to DNA Damage.</a>&rdquo; <em>Cell Reports</em>. Vol. 24, Issue 7. <a href="../../../url/doi/10-1016-j-celrep-2018-07-042/" title="Cell Reports / 2018.07.042" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -157,10 +157,10 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-3">
-          <p class="small"><sup>8</sup> Chambers, P. (2008) &ldquo;Jumbo: The Greatest Elephant in the World.&rdquo; (1st US ed.). Hanover, N.H.: Steerforth Press. p. PT14. ISBN 1586421530. <a href="../../../url/google-books/2WkXkdmLGNoC/" title="Google Books / Jumbo: This Being the True Story of the Greatest Elephant in the World (2008)" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>9</sup> &ldquo;Jumbo&rdquo; (adj.). Online Etymology Dictionary. <a href="../../../url/etym/jumbo/" title="Online Etymology Dictionary / Jumbo" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>10</sup> Collins, G. (1993) &ldquo;Barnum's Jumbo Is Back In Museum's Center Ring.&rdquo; <em>New York Times</em>. <a href="../../../url/www/time-elephants-barnum-bailey-history/" title="New York Times / 3733595" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>11</sup> Ager, S. (2015) &ldquo;As Ringling Ends Circus, See Where Its Elephants Retired.</a>&rdquo; <em>National Geographic</em>. <a href="../../../url/www/nationalgeographic-ringling-circus-elephants-florida-center/" title="National Geographic / 2015.9.16" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>8</sup> Chambers, P. (2008) &ldquo;Jumbo: The Greatest Elephant in the World.&rdquo; (1st US ed.). Hanover, N.H.: Steerforth Press. p. PT14. ISBN 1586421530. <a href="../../../url/google-books/2WkXkdmLGNoC/" title="Google Books / Jumbo: This Being the True Story of the Greatest Elephant in the World (2008)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>9</sup> &ldquo;Jumbo&rdquo; (adj.). Online Etymology Dictionary. <a href="../../../url/etym/jumbo/" title="Online Etymology Dictionary / Jumbo" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>10</sup> Collins, G. (1993) &ldquo;Barnum's Jumbo Is Back In Museum's Center Ring.&rdquo; <em>New York Times</em>. <a href="../../../url/www/time-elephants-barnum-bailey-history/" title="New York Times / 3733595" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>11</sup> Ager, S. (2015) &ldquo;As Ringling Ends Circus, See Where Its Elephants Retired.</a>&rdquo; <em>National Geographic</em>. <a href="../../../url/www/nationalgeographic-ringling-circus-elephants-florida-center/" title="National Geographic / 2015.9.16" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
