--- a/scene/one/reference-2/index.html
+++ b/scene/one/reference-2/index.html
@@ -114,9 +114,9 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Games For Change (G4C), Festival, New York City. <a href="../../../url/www/gamesforchange/" title="Games For Change" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>2</sup> Vimeo / Ryan Woodward &ndash; Thought of You (animated short, 2010). <a href="../../../url/vimeo/14803194/" title="Vimeo / Ryan Woodward / Thought of You" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>3</sup> National Gallery of Art (NGA) / Eadweard Muybridge / Animal Locomotion (1887), Plate 733. <a href="../../../url/www/nga-muybridge-733/" title="Eadweard Muybridge / Animal Locomotion (1887), Plate 733." target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>1</sup> Games For Change (G4C), Festival, New York City. <a href="../../../url/www/gamesforchange/" title="Games For Change" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> Vimeo / Ryan Woodward &ndash; Thought of You (animated short, 2010). <a href="../../../url/vimeo/14803194/" title="Vimeo / Ryan Woodward / Thought of You" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> National Gallery of Art (NGA) / Eadweard Muybridge / Animal Locomotion (1887), Plate 733. <a href="../../../url/www/nga-muybridge-733/" title="Eadweard Muybridge / Animal Locomotion (1887), Plate 733." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
