--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -239,10 +239,10 @@
       </div>
 
       <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> MoMA. Exhibitons, 1998: Aleksandr Rodchenko. <a href="../../../url/moma/rodchenko/" rel="noopener" target="_blank" title="MoMA / Exhibitons / 1998 / Aleksandr Rodchenko">Website Link</a>.</p>
-        <p class="small"><sup>2</sup> Gamblin. Mineral, modern colors. <a href="../../../url/com/gamblincolors-mineral-modern-colors/" rel="noopener" target="_blank" title="Gamblin / Mineral, Modern Colors">Website Link</a>.</p>
-        <p class="small"><sup>3</sup> Gamblin. Conservation colors. <a href="../../../url/com/conservationcolors/" rel="noopener" target="_blank" title="Gamblin / Conservation Colors">Website Link</a>.</p>
-        <p class="small"><sup>4</sup> Wikipedia: Magenta. <a href="../../../url/wiki/magenta/" rel="noopener" target="_blank" title="Wikipedia / Magenta">Website Link</a>.</p>
+        <p class="small"><sup>1</sup> MoMA. Exhibitons, 1998: Aleksandr Rodchenko. <a href="../../../url/moma/rodchenko/" rel="noopener" target="_blank" title="MoMA / Exhibitons / 1998 / Aleksandr Rodchenko">Website&nbsp;Link</a>.</p>
+        <p class="small"><sup>2</sup> Gamblin. Mineral, modern colors. <a href="../../../url/com/gamblincolors-mineral-modern-colors/" rel="noopener" target="_blank" title="Gamblin / Mineral, Modern Colors">Website&nbsp;Link</a>.</p>
+        <p class="small"><sup>3</sup> Gamblin. Conservation colors. <a href="../../../url/com/conservationcolors/" rel="noopener" target="_blank" title="Gamblin / Conservation Colors">Website&nbsp;Link</a>.</p>
+        <p class="small"><sup>4</sup> Wikipedia: Magenta. <a href="../../../url/wiki/magenta/" rel="noopener" target="_blank" title="Wikipedia / Magenta">Website&nbsp;Link</a>.</p>
 
       </div>
 
