--- a/scene/two/the-forest-behind-the-trees/index.html
+++ b/scene/two/the-forest-behind-the-trees/index.html
@@ -229,8 +229,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>3</sup> D'Augustine, Corey. <em>In the Studio</em> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/yt/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video Link</a></p>
-          <p class="small"><sup>4</sup> Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/www/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>3</sup> D'Augustine, Corey. <em>In the Studio</em> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/yt/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/www/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
           <!-- YouTube Series of Bateman talks ?? -->
 
@@ -296,11 +296,16 @@
 
       </div>
 
+      <div>
+        <p>As for painting a boreal forest for <em>White Tiger</em>, the pine trees are designed to appear in the background and appear blurred, bordering on Impressionism. There is a compressed sense of the spaces between the trees. The forest is altogether off in the distance. The layers of the forest catch the light en masse, and are designed to contrast with the deep colors and values of the subject in the foreground. In the midground there is atmosphere. This separation helps to flatten the focus of an otherwise Naturalist painting of a tiger to the tiger and to the eyes of the tiger and so on.</p>
+
+      </div>
+
       <div class="clear">
 
         <div class="quote" id="footnotes-3">
-          <p class="small"><sup>5</sup> O'Donovan, Kieran. <em>Our Planet</em> (2019) Silverback Films, Netfilx <a href="../../../url/www/ourplanet/" title="Our Planet (2019)" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>6</sup> Galloway, Gloria. &lsquo;Canada's boreal forest needs global protection&hellip;&rsquo; (2011) The Globe And Mail. <a href="../../../url/www/theglobeandmail-canadas-boreal-forest/" title="The Globe And Mail / Politics / Canada's boreal forest needs global protection (2011)" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>5</sup> O'Donovan, Kieran. <em>Our Planet</em> (2019) Silverback Films, Netfilx <a href="../../../url/www/ourplanet/" title="Our Planet (2019)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup> Galloway, Gloria. &lsquo;Canada's boreal forest needs global protection&hellip;&rsquo; (2011) The Globe And Mail. <a href="../../../url/www/theglobeandmail-canadas-boreal-forest/" title="The Globe And Mail / Politics / Canada's boreal forest needs global protection (2011)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
