--- a/scene/one/technology-documentary/index.html
+++ b/scene/one/technology-documentary/index.html
@@ -88,8 +88,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Ralph, J. &ldquo;We Will Not Go&rdquo;, 2014. <a href="../../../url/yt/iJ9WXvPhTrs/" title="YouTube / We Will Not Go by J. Ralph with Salif Keita, Youssou Ndour, Fally Ipupa" target="_blank" rel="noopener">Video Link</a></p>
-          <p class="small"><sup>2</sup> Ramsey, S. (2017) &ldquo;Interview With Emmanuel de Merode, Director of Virunga National Park&rdquo; National Geographic. <a href="../../../url/-org/nationalgeographic-interview-with-emmanuel-de-merode-director-of-virunga-national-park/" title="National Geographic / Interview with Emmanuel de Merode" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>1</sup> Ralph, J. &ldquo;We Will Not Go&rdquo;, 2014. <a href="../../../url/yt/iJ9WXvPhTrs/" title="YouTube / We Will Not Go by J. Ralph with Salif Keita, Youssou Ndour, Fally Ipupa" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> Ramsey, S. (2017) &ldquo;Interview With Emmanuel de Merode, Director of Virunga National Park&rdquo; National Geographic. <a href="../../../url/-org/nationalgeographic-interview-with-emmanuel-de-merode-director-of-virunga-national-park/" title="National Geographic / Interview with Emmanuel de Merode" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -153,8 +153,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>3</sup> Mann, E. M. <a href="../../../url/tw/michaelmann/" title="Twitter / Michael E. Mann" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>4</sup> Sellers, P. NASA Goddard, 2016. <a href="../../../url/nasa/piers-sellers-1955-2016/" title="NASA / Piers Sellers" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>3</sup> Mann, E. M. <a href="../../../url/tw/michaelmann/" title="Twitter / Michael E. Mann" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> Sellers, P. NASA Goddard, 2016. <a href="../../../url/nasa/piers-sellers-1955-2016/" title="NASA / Piers Sellers" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -232,8 +232,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>5</sup> Scott Salinas, H. <em>The Ivory Game</em>, 2016. <a href="../../../url/www/hscottsalinas-the-ivory-game/" title="H. Scott Salinas / The Ivory Game" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>6</sup> Kaiserlicht. <em>The Ivory Game</em> Title Sequence, 2016. <a href="../../../url/vimeo/191002515/" title="Vimeo / Kaiserlicht / The Ivory Game - Title Sequence" target="_blank" rel="noopener">Video Link</a><a href="../../../url/www/kaiserlicht-the-ivory-game/" title="Kaiserlicht / The Ivory Game" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>5</sup> Scott Salinas, H. <em>The Ivory Game</em>, 2016. <a href="../../../url/www/hscottsalinas-the-ivory-game/" title="H. Scott Salinas / The Ivory Game" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup> Kaiserlicht. <em>The Ivory Game</em> Title Sequence, 2016. <a href="../../../url/vimeo/191002515/" title="Vimeo / Kaiserlicht / The Ivory Game - Title Sequence" target="_blank" rel="noopener">Video&nbsp;Link</a><a href="../../../url/www/kaiserlicht-the-ivory-game/" title="Kaiserlicht / The Ivory Game" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
 
         </div>
